# godot-fetcher

./: Cargo.toml  README.md
src/: main.rs
