[package]
name = "godot-fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.3"
log = "0.4.17"
prettytable-rs = "0.10.0"
regex = "1.8.1"
reqwest = { version = "0.11.17", features = ["json", "blocking"] }
scraper = "0.16.0"
simple_logger = "4.1.0"
textwrap = "0.16.0"
zip = "0.6.6"
