[package]
name = "godot-fetcher"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.4"
futures-util = "0.3.28"
indicatif = "0.17.5"
log = "0.4.19"
prettytable-rs = "0.10.0"
regex = "1.9.1"
reqwest = { version = "0.11.18", features = ["json", "blocking", "stream"] }
scraper = "0.17.1"
simple_logger = "4.2.0"
textwrap = "0.16.0"
tokio = { version = "1.29.1", features = ["full"] }
zip = "0.6.6"
